k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-tool
  namespace: monitoring-tool
spec:
  ingressClassName: traefik
  rules:
    - host: monitoring-tool.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-tool-frontend
                port:
                  name: http
